--- a/sys/hidusbfx2.vcxproj
+++ b/sys/hidusbfx2.vcxproj
@@ -22,11 +22,13 @@
     <ProjectGuid>{0C56E492-CEB9-49C4-B127-FE437B55A879}</ProjectGuid>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
     <KMDF_VERSION_MAJOR>1</KMDF_VERSION_MAJOR>
-    <SupportsPackaging>false</SupportsPackaging>
+    <SupportsPackaging>true</SupportsPackaging>
     <RequiresPackageProject>true</RequiresPackageProject>
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <SampleGuid>{FFEC78A4-6826-4649-94F7-7886ABCAA11A}</SampleGuid>
+    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
+    <ProjectName>nvshldctrl</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -90,10 +92,10 @@
       <WppTraceFunction>TraceEvents(LEVEL,FLAGS,MSG,...)</WppTraceFunction>
       <WppGenerateUsingTemplateFile>{km-WdfDefault.tpl}*.tmh</WppGenerateUsingTemplateFile>
     </ClCompile>
-    <Inf Include=".\hidusbfx2.inx">
+    <Inf Include="nvshldctrl.inx">
       <Architecture>$(InfArch)</Architecture>
       <SpecifyArchitecture>true</SpecifyArchitecture>
-      <CopyOutput>.\$(IntDir)\hidusbfx2.inf</CopyOutput>
+      <CopyOutput>.\$(IntDir)\nvshldctrl.inf</CopyOutput>
     </Inf>
     <OtherWpp Include="hidusbfx2.rc">
       <WppEnabled>true</WppEnabled>
@@ -103,16 +105,16 @@
     </OtherWpp>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetName>hidusbfx2</TargetName>
+    <TargetName>nvshldctrl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>hidusbfx2</TargetName>
+    <TargetName>nvshldctrl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <TargetName>hidusbfx2</TargetName>
+    <TargetName>nvshldctrl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <TargetName>hidusbfx2</TargetName>
+    <TargetName>nvshldctrl</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
