--- a/sys/hidusbfx2.vcxproj.Filters
+++ b/sys/hidusbfx2.vcxproj.Filters
@@ -35,7 +35,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="hid.c" />
-    <ClCompile Include="usb.c" />
     <ClCompile Include="hid.c" />
     <ClCompile Include="usb.c" />
   </ItemGroup>
@@ -49,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hidusbfx2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
