--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /sys/Debug
+/nvshldctrl.VC.VC.opendb
+/nvshldctrl.VC.db
+/hidusbfx2.VC.db
+/.vs/nvshldctrl/v14/.suo
+/.vs/nvshldctrl/v14
