Updated ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /hidusbfx2.VC.db
 /.vs/nvshldctrl/v14/.suo
 /.vs/nvshldctrl/v14
+/sys/Release/nvshldctrl.tlog
+/sys/Release/nvshldctrl
+/sys/Release
+/sys/x64/Release
+/sys/x64/Debug
